[tool.poetry]
name = "fastapi youtube project"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.95.0"
uvicorn = "^0.21.1"
pydantic = "^1.10.7"


[tool.poetry.group.dev.dependencies]
pylint = "^2.17.1"
black = "^23.3.0"
mypy = "^1.1.1"
isort = "^5.12.0"
pre-commit = "^3.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
